# skelgen

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
src/skelgen/: __init__.py  cli.py  generator.py
src/skelgen/templates/: api-service.sh.j2  backup.sh.j2  basic.sh.j2  deploy.sh.j2  service.sh.j2
tests/: test_cli.py  test_generator.py
